<resources>
    <string name="app_name">天天伞</string>


    <string name="action_settings">Settings</string>
    <string name="prompt_email">请输入手机号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_registered">注册</string>
    <string name="action_Verificationcode">输入验证码</string>
    <string name="new_prompt_password">设置登陆密码(密码大于6位)</string>
    <string name="new_prompt_password_too">请再次输入密码</string>
    <string name="Verificationcode">获取验证码</string>
    <string name="action_setting">设置</string>
    <string name="action_manual">使用指南</string>
    <string name="action_record">借伞记录</string>
    <string name="action_preferential">优惠券</string>
    <string name="action_wallet">我的钱包</string>
    <string name="action_name">昵称</string>
    <string name="action_approve">已认证</string>
    <string name="agent_addr">地址：%1$s</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="storage_description_title">你能允许存储权限吗?</string>
    <string name="storage_description_why_we_need_the_permission">你好,地图缓存需要存储权限。你能允许吗?</string>
    <string name="location_description_title">你能允许定位权限吗?</string>
    <string name="location_description_why_we_need_the_permission">你好,定位功能需要获取位置权限。你能允许吗?</string>
    <string name="infowindow_navigation">导航</string>
    <string name="infowindow_call">电话</string>
    <string name="title_activity_index">IndexActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
