<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorggrey"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/myPhone"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginRight="10dp"
                android:layout_weight="7"
                android:background="@drawable/button_rounded_background_white"
                android:hint="@string/prompt_email"
                android:textColor="@color/colorggrey" />

            <Button
                android:layout_width="0dp"
                android:layout_height="53dp"
                android:layout_weight="3"
                android:background="@drawable/button_rounded_backgroud_verificationcode"
                android:text="@string/Verificationcode"
                android:textColor="@color/colorwhite" />
        </LinearLayout>

        <EditText
            android:id="@+id/auth_code"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded_background_white"
            android:hint="@string/action_Verificationcode"
            android:textColor="@color/colorggrey" />

        <EditText
            android:id="@+id/Login_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded_background_white"
            android:hint="@string/new_prompt_password"
            android:textColor="@color/colorggrey" />

        <EditText
            android:id="@+id/Login_passwords"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded_background_white"
            android:hint="@string/new_prompt_password_too"
            android:textColor="@color/colorggrey" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_rounded_background_blue"
            android:text="@string/action_sign_in"
            android:textColor="@color/colorwhite" />
    </LinearLayout>

</LinearLayout>