<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/colorwhite"
        android:orientation="horizontal">


        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:src="@mipmap/action_backgrounds"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/action_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/action_name" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_approve"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/action_editext" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/header_mian_mypurse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"
                android:background="@mipmap/action_wallet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_wallet"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/iteam_textview_textsize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/header_mian_myfavorable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"
                android:background="@mipmap/action_preferential" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/action_preferential"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/iteam_textview_textsize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/header_mian_myrecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"
                android:background="@mipmap/action_parasol" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/action_record"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/iteam_textview_textsize" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/header_mian_shiyong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"
                android:background="@mipmap/action_book" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/action_manual"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/iteam_textview_textsize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/header_mian_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"
                android:background="@mipmap/action_settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/action_setting"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/iteam_textview_textsize" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
