<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/button_rounded_background_white"
            android:orientation="horizontal"
            android:padding="0dp">

            <EditText
                android:id="@+id/reg_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_weight="7"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/prompt_email"
                android:textColor="@color/editext"
                android:textColorHint="@color/colorggrey"
                android:textSize="@dimen/activity_horizontal_margin" />

            <Button
                android:id="@+id/reg_auth_code"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:background="@drawable/button_rounded_background_blue"
                android:gravity="center"
                android:text="@string/Verificationcode"
                android:textColor="@color/colorwhite"
                android:textSize="@dimen/editext" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded_background_white"
            android:orientation="vertical">

            <EditText
                android:id="@+id/auth_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/action_Verificationcode"
                android:textColor="@color/editext"
                android:textColorHint="@color/colorggrey"
                android:textSize="@dimen/activity_horizontal_margin" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded_background_white"
            android:orientation="vertical">

            <EditText
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/new_prompt_password"
                android:inputType="textPassword"
                android:textColor="@color/editext"
                android:textColorHint="@color/colorggrey"
                android:textSize="@dimen/activity_horizontal_margin" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded_background_white"
            android:orientation="vertical">

            <EditText
                android:id="@+id/reg_passwords"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:hint="@string/new_prompt_password_too"
                android:inputType="textPassword"
                android:textColor="@color/editext"
                android:textColorHint="@color/colorggrey"
                android:textSize="@dimen/activity_horizontal_margin" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@drawable/checkbox_backgroud"
                android:button="@null" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/User_agreement"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/User_agreement2"
                android:textColor="@color/red"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/zhuce"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_rounded_background_blue"
            android:gravity="center"
            android:text="@string/action_registered"
            android:textColor="@color/colorwhite"
            android:textSize="@dimen/activity_vertical_margin" />
    </LinearLayout>

</LinearLayout>