<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_rounded_background_white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@mipmap/action_portrait"
                android:gravity="center" />

            <EditText
                android:id="@+id/Login_Username"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="8"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/prompt_email"
                android:textColor="@color/editext"
                android:textColorHint="@color/colorggrey"
                android:textSize="@dimen/editext" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_rounded_background_white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@mipmap/action_lock" />

            <EditText
                android:id="@+id/Login_Password"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_weight="8"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:textColor="@color/editext"
                android:textColorHint="@color/colorggrey"
                android:textSize="@dimen/editext" />
        </LinearLayout>

        <Button
            android:id="@+id/Login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_rounded_background_blue"
            android:gravity="center"
            android:text="@string/action_sign_in"
            android:textColor="@color/colorwhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Login_registered"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="我要注册"
                android:textColor="@color/colorwhite" />

            <TextView
                android:id="@+id/Login_Forgot_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="忘记密码"
                android:textColor="@color/colorwhite" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="———其他登陆———"
            android:textColor="#FFDDDCDC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/Login_QQ"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                android:background="@mipmap/action_qq"
                android:scaleType="fitXY" />

            <ImageView
                android:id="@+id/Login_weixin"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:background="@mipmap/action_weixin"
                android:scaleType="fitXY" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>